# tetris

./: .clangd  .gitignore  CMakeLists.txt  compile_flags.txt  run.sh
include/: ball.hpp  block.hpp  colors.hpp  game.hpp  grid.hpp
src/: ball.cpp  block.cpp  game.cpp  grid.cpp  main.cpp  tetromino.cpp
tests/: test_main.cpp
